# transfer

./: A2-part1.txt  A2-part3.txt  A2-results.txt  MOH.ddl  MOH2.ddl  MOHdrop.ddl  code (2).tgz  code_samples_w6.tgz  code_samples_w8.tgz  createTable.ddl  dropTable.ddl  loadData.ddl  starter_code.tgz  sum_max_reduction_CUDA10.tgz  sum_max_reduction_CUDA8.tgz
A4/: INFO.txt  best_cpu.cu  kernel1.cu  kernel2.cu  kernel3.cu  kernel4.cu  kernel5.cu  plot.py  reduce.cu  starter_code.tgz
A4/starter_code/: CMakeLists.txt  best_cpu.cu  filtertest.c  kernel1.cu  kernel2.cu  kernel3.cu  kernel4.cu  kernels.h  main.cu  recduce.cu  reduce.cu  tests.cu
GPU_image_filtering/: clock.h  kernels.h  main.cu  readme  tests.cu
Server/: package-lock.json
Very_small_file_system/: .autorun.sh.swp  .nfs0000000004b0001300000129  .nfs0000000004b002cc0000012d  INFO.txt  Makefile  autorun.sh  case15-checker.img  ext2_checker  ext2_checker.c  ext2_cp  ext2_cp.c  ext2_ln  ext2_ln.c  ext2_mkdir  ext2_mkdir.c  ext2_restore  ext2_restore.c  ext2_rm  ext2_rm.c  meme2.img  new_funcs.c  new_funcs.h  plagiarism.txt
code/: Makefile  outf_test  outf_test2  script-perfstat.sh  test.c  test2.c
code_samples_w6/: Makefile  copyinprivate  copyinprivate.c  critical  critical.c  dotprod  dotprod-sync-atomic  dotprod-sync-atomic-localsums  dotprod-sync-atomic-localsums.c  dotprod-sync-atomic.c  dotprod-sync-critical  dotprod-sync-critical.c  dotprod-sync-wrong  dotprod-sync-wrong.c  dotprod.c  dotprod2  dotprod2.c  exercise  exercise-omp  exercise-omp.c  exercise-omp2  exercise-omp2.c  exercise.c  hello  (+24 more)
(+85 files in other folders)
